@@ -35,6 +35,7 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2006-12-04 DP  1.8.0  Remove obsolete support for non-Unicode builds
 2006-12-04 DP  1.6.2  Build against PostgreSQL 8.2 on Windows  
 2006-12-01 DP  1.6.2  Fix some oddities in the way current per-table vacuum
                       settings are displayed
